--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mt-laundry-landing",
+  "name": "mt-dish-landing",
   "version": "1.0.0",
-  "description": "New Maytag laundry landing page",
+  "description": "New Maytag dish landing page",
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run typings install",
