--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.6",
-    "systemjs": "0.19.20",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.20",
+    "yargs": "^5.0.0",
     "zone.js": "0.5.14"
   },
   "devDependencies": {
